--- a/Jupyter/Query.ipynb
+++ b/Jupyter/Query.ipynb
@@ -107,8 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check and Clean each result file dataframe from csv\n",
-    "for each file checking use index, like this:\n",
+    "Check and Clean each result file dataframe from CSV input, to check each file, you can access it based on index, like this:\n",
     "\n",
     "- check data + name column\n",
     "    - df['number of index'].head()\n",
@@ -117,7 +116,35 @@
     "- rename column\n",
     "    - df['number of index']['number of index']= df['number of index'].rename(columns = {'name column':'new name column'})\n",
     "- drop column by index\n",
-    "    - df['number of index'].drop(df['number of index'].columns['number of index'], axis=1, inplace=True)"
+    "    - df['number of index'].drop(df['number of index'].columns['number of index'], axis=1, inplace=True)\n",
+    "- etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ingest dataframe into db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ingest_df_To_DB (num, num_a, num_b, num_c):\n",
+    "    de=read_csv(num,num_a)\n",
+    "    namedb= multi_name_csv(num_b)\n",
+    "    for i in range(num_c):\n",
+    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), con=engine, if_exists = 'replace', index=False)\n",
+    "\n",
+    "def main():\n",
+    "    ingest_df_To_DB(12,12,2,2)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
