--- a/Jupyter/Ingest csv to db.ipynb
+++ b/Jupyter/Ingest csv to db.ipynb
@@ -7,7 +7,7 @@
     "# Outline of Framework\n",
     "- Create Database Connection\n",
     "- Create Table\n",
-    "- Exploration Data"
+    "- Ingest Data"
    ]
   },
   {
@@ -107,6 +107,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "test the function:\n",
+    "\n",
+    "di= read_multi_csv(number of index in list name csv, number of total index)\n",
+    "di= read_multi_csv (12,12)\n",
+    "\n",
     "Check and Clean each result file dataframe from CSV input, to check each file, you can access it based on index, like this:\n",
     "\n",
     "- check data + name column\n",
@@ -124,7 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest dataframe into db"
+    "### Ingest dataframe into db\n",
+    "\n",
+    "Build a function to put Dataframe into DB using pandas to_sql and run using entries point - main()."
    ]
   },
   {
@@ -141,6 +148,83 @@
     "\n",
     "def main():\n",
     "    ingest_df_To_DB(12,12,2,2)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Completed code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "import re\n",
+    "import io\n",
+    "from sqlalchemy.engine import url as sa_url\n",
+    "from sqlalchemy import create_engine\n",
+    "from connection import connectionDB\n",
+    "\n",
+    "db_connect_url = sa_url.URL(\n",
+    "            drivername='postgresql+psycopg2',\n",
+    "            username=connectionDB.config.get('username'),\n",
+    "            password=connectionDB.config.get('password'),\n",
+    "            host=connectionDB.config.get('host'),\n",
+    "            port=str(connectionDB.config.get('port')),\n",
+    "            database=connectionDB.config.get('database'),\n",
+    "            \n",
+    ")\n",
+    "\n",
+    "engine= create_engine(db_connect_url)\n",
+    "\n",
+    "def insert_into (num):\n",
+    "    pathdir= r'data'\n",
+    "    allFiles = glob.glob(pathdir + \"/*.csv\")\n",
+    "    while True:\n",
+    "        try:\n",
+    "            r1 = str(re.findall(r\"/+[a-zA-Z]*\",allFiles[num]))\n",
+    "            tabname = re.findall(r\"[a-zA-Z]+\",r1)\n",
+    "            r3 = re.findall(r\"\\w+/\\w+.\\w+\",allFiles[num])\n",
+    "        except ValueError:\n",
+    "            print(\"Please enter a valid range number of index for table\")\n",
+    "        else:\n",
+    "            break\n",
+    "    return r3, tabname\n",
+    "\n",
+    "def multi_name_csv (num):\n",
+    "    csv_list=[]\n",
+    "    for j in range(num):\n",
+    "        csv_list.append(insert_into(j))\n",
+    "        df = pd.DataFrame(csv_list, columns =['csv_name', 'dbname'])\n",
+    "        csv_name = df.iloc[:, [0]]\n",
+    "        dname = df.iloc[:, [1]]\n",
+    "    return csv_name, dname\n",
+    "\n",
+    "def read_multi_csv(num_list_csv,num_index):\n",
+    "    list_csv= multi_name_csv(num_list_csv)\n",
+    "    df_list = []\n",
+    "    for i in range(num_index):\n",
+    "        df_list.append(pd.read_csv('{x}'.format(x=list_csv[0].iloc[i][0][0]), encoding= 'unicode_escape', dtype='unicode'))\n",
+    "    return df_list\n",
+    "\n",
+    "def ingest_df_To_DB (num):\n",
+    "    de=read_multi_csv(num,num)\n",
+    "    namedb= multi_name_csv(num)\n",
+    "    for i in range(num):\n",
+    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), con=engine, if_exists = 'replace', index=False)\n",
+    "\n",
+    "def main():\n",
+    "    ingest_df_To_DB(12)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
