--- a/Jupyter/Ingest csv to db.ipynb
+++ b/Jupyter/Ingest csv to db.ipynb
@@ -140,14 +140,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ingest_df_To_DB (num, num_a, num_b, num_c):\n",
-    "    de=read_csv(num,num_a)\n",
-    "    namedb= multi_name_csv(num_b)\n",
-    "    for i in range(num_c):\n",
+    "def ingest_df_To_DB (num):\n",
+    "    de=read_multi_csv(num,num)\n",
+    "    namedb= multi_name_csv(num)\n",
+    "    for i in range(num):\n",
     "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), con=engine, if_exists = 'replace', index=False)\n",
     "\n",
     "def main():\n",
-    "    ingest_df_To_DB(12,12,2,2)\n",
+    "    ingest_df_To_DB(12)\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
