--- a/Jupyter/Ingest csv to db.ipynb
+++ b/Jupyter/Ingest csv to db.ipynb
@@ -99,7 +99,9 @@
     "    list_csv= multi_name_csv(num_list_csv)\n",
     "    df_list = []\n",
     "    for i in range(num_index):\n",
-    "        df_list.append(pd.read_csv('{x}'.format(x=list_csv[0].iloc[i][0][0]), encoding= 'unicode_escape', dtype='unicode'))\n",
+    "        df_list.append(pd.read_csv('{x}'.format(x=list_csv[0].iloc[i][0][0]), \n",
+    "                            encoding= 'unicode_escape', \n",
+    "                                dtype='unicode'))\n",
     "    return df_list"
    ]
   },
@@ -144,7 +146,10 @@
     "    de=read_multi_csv(num,num)\n",
     "    namedb= multi_name_csv(num)\n",
     "    for i in range(num):\n",
-    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), con=engine, if_exists = 'replace', index=False)\n",
+    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), \n",
+    "                                    con=engine, \n",
+    "                                        if_exists = 'replace', \n",
+    "                                            index=False)\n",
     "\n",
     "def main():\n",
     "    ingest_df_To_DB(12)\n",
@@ -205,7 +210,9 @@
     "    csv_list=[]\n",
     "    for j in range(num):\n",
     "        csv_list.append(insert_into(j))\n",
-    "        df = pd.DataFrame(csv_list, columns =['csv_name', 'dbname'])\n",
+    "        df = pd.DataFrame(csv_list, \n",
+    "                            columns =['csv_name', \n",
+    "                                      'dbname'])\n",
     "        csv_name = df.iloc[:, [0]]\n",
     "        dname = df.iloc[:, [1]]\n",
     "    return csv_name, dname\n",
@@ -214,14 +221,20 @@
     "    list_csv= multi_name_csv(num_list_csv)\n",
     "    df_list = []\n",
     "    for i in range(num_index):\n",
-    "        df_list.append(pd.read_csv('{x}'.format(x=list_csv[0].iloc[i][0][0]), encoding= 'unicode_escape', dtype='unicode'))\n",
+    "        df_list.append(pd.read_csv('{x}'.format(x=list_csv[0].iloc[i][0][0]), \n",
+    "                        encoding= 'unicode_escape', \n",
+    "                        dtype='unicode'\n",
+    "                        ))\n",
     "    return df_list\n",
     "\n",
     "def ingest_df_To_DB (num):\n",
     "    de=read_multi_csv(num,num)\n",
     "    namedb= multi_name_csv(num)\n",
     "    for i in range(num):\n",
-    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), con=engine, if_exists = 'replace', index=False)\n",
+    "        de[i].to_sql('{x}'.format(x=namedb[1].iloc[i][0][0]), \n",
+    "                                   con=engine, \n",
+    "                                     if_exists = 'replace', \n",
+    "                                        index=False)\n",
     "\n",
     "def main():\n",
     "    ingest_df_To_DB(12)\n",
