--- a/Jupyter/Ingest csv to db.ipynb
+++ b/Jupyter/Ingest csv to db.ipynb
@@ -133,7 +133,10 @@
    "source": [
     "### Ingest dataframe into db\n",
     "\n",
-    "Build a function to put Dataframe into DB using pandas to_sql and run using entries point - main()."
+    "Build a function to put Dataframe into DB using pandas to_sql and run using entries point - main().\n",
+    "\n",
+    "for example:\n",
+    "    We want to create database tables based on 12 different CSV files, so we use paramater 'num' = 12 ---> ingest_df_To_DB(12)"
    ]
   },
   {
