--- a/Jupyter/Query.ipynb
+++ b/Jupyter/Query.ipynb
@@ -54,6 +54,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Completed Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
